--- a/markdown_test.ipynb
+++ b/markdown_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "062e59a7",
+   "id": "ca67805e",
    "metadata": {},
    "source": [
     "# This is a H1\n",
@@ -108,7 +108,15 @@
     "\n",
     "* __[마크다운 공식 사이트]__(https://daringfireball.net/projects/markdown/)\n",
     "* ___[GitHub]___(https://github.com/)\n",
-    "* *[아이펠]*(https://aiffel.io/)"
+    "* *[아이펠]*(https://aiffel.io/)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "이번엔 사진이다.\n",
+    "\n",
+    "![오리 사진이다](https://d3s0tskafalll9.cloudfront.net/media/images/F-3-23.max-800x600_yafLaWc.png)\n",
+    "\n",
+    "<imge src=\"/path/to/img.jpg\" width=\"120px\" height=\"80px\"><img>"
    ]
   }
  ],
