added a cat image

--- a/markdown_test.ipynb
+++ b/markdown_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ca67805e",
+   "id": "0b4c9746",
    "metadata": {},
    "source": [
     "# This is a H1\n",
@@ -116,8 +116,19 @@
     "\n",
     "![오리 사진이다](https://d3s0tskafalll9.cloudfront.net/media/images/F-3-23.max-800x600_yafLaWc.png)\n",
     "\n",
-    "<imge src=\"/path/to/img.jpg\" width=\"120px\" height=\"80px\"><img>"
+    "<imge src=\"/path/to/img.jpg\" width=\"120px\" height=\"80px\"><img>\n",
+    "    \n",
+    "    \n",
+    "![이번엔 고양이다](img.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60567fc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
