Colab을 통해 생성됨

--- a/BaseballGamePractice.ipynb
+++ b/BaseballGamePractice.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "iRiWC0rP-msk",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d6095603-ef49-4016-8fa8-8f28de806f26"
+        "outputId": "700217db-bad5-4d50-cbf6-cd4ee7ba4405"
       },
       "outputs": [
         {
@@ -41,9 +41,15 @@
           "name": "stdout",
           "text": [
             "숫자 야구 게임 시작! (정답은 다섯 자리 숫자)\n",
-            "다섯 자리 숫자를 입력하세요.: 34795\n",
-            "2 strike 3 ball\n",
-            "거의 다 맞췄어요😲!(2 strike, 3 ball)\n",
+            "다섯 자리 숫자를 입력하세요.: 12354\n",
+            "0 strike 3 ball\n",
+            "다시 시도하세요!\n",
+            "다섯 자리 숫자를 입력하세요.: 12579\n",
+            "3 strike 0 ball\n",
+            "다시 시도하세요!\n",
+            "다섯 자리 숫자를 입력하세요.: 34561\n",
+            "3 strike 0 ball\n",
+            "다시 시도하세요!\n",
             "다섯 자리 숫자를 입력하세요.: 34579\n",
             "5 strike 0 ball\n",
             "정답입니다 🎉 게임 종료!\n"
@@ -86,7 +92,12 @@
         "  elif strike == 2 and ball == 3:\n",
         "    print(\"거의 다 맞췄어요😲!(2 strike, 3 ball)\")\n",
         "  else:\n",
-        "    print(\"다시 시도하세요!\")\n"
+        "    print(\"다시 시도하세요!\")\n",
+        "\n",
+        "\n",
+        "#첫 번째 퀘스트 실습 회고\n",
+        "#이미현: 지수님과 페어로 숫자 야구 게임 연습 코드를 작성했는데, 처음엔 막막했지만 지피티의 도움을 받아도 이해가 어려운 조건문/명령어는 함께 고민도 해보고 결과 출력문은 나름 한단계 발전 시켜서 조금 뿌듯했던 시간이었습니다.\n",
+        "#김지수: 너무 어렵게 하지 않고 코드 하나하나 이해해가면서 미현님과 함께 프로그램을 만들 수 있어서 의미 있는 시간이었습니다."
       ]
     }
   ]
