Colab을 통해 생성됨

--- a/BaseballGamePractice.ipynb
+++ b/BaseballGamePractice.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "iRiWC0rP-msk",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "700217db-bad5-4d50-cbf6-cd4ee7ba4405"
+        "outputId": "ef2f70aa-f2e1-4741-f608-39e447fc73aa"
       },
       "outputs": [
         {
@@ -41,15 +41,21 @@
           "name": "stdout",
           "text": [
             "숫자 야구 게임 시작! (정답은 다섯 자리 숫자)\n",
-            "다섯 자리 숫자를 입력하세요.: 12354\n",
+            "다섯 자리 숫자를 입력하세요.: 12345\n",
             "0 strike 3 ball\n",
             "다시 시도하세요!\n",
-            "다섯 자리 숫자를 입력하세요.: 12579\n",
-            "3 strike 0 ball\n",
+            "다섯 자리 숫자를 입력하세요.: 31267\n",
+            "1 strike 1 ball\n",
             "다시 시도하세요!\n",
-            "다섯 자리 숫자를 입력하세요.: 34561\n",
-            "3 strike 0 ball\n",
+            "다섯 자리 숫자를 입력하세요.: 34179\n",
+            "4 strike 0 ball\n",
             "다시 시도하세요!\n",
+            "다섯 자리 숫자를 입력하세요.: 34125\n",
+            "2 strike 1 ball\n",
+            "다시 시도하세요!\n",
+            "다섯 자리 숫자를 입력하세요.: 34795\n",
+            "2 strike 3 ball\n",
+            "거의 다 맞췄어요😲!(2 strike, 3 ball)\n",
             "다섯 자리 숫자를 입력하세요.: 34579\n",
             "5 strike 0 ball\n",
             "정답입니다 🎉 게임 종료!\n"
